[gd_scene load_steps=6 format=3 uid="uid://dqki2hinaj5f"]

[ext_resource type="Texture2D" uid="uid://c8a30o7nhnqs1" path="res://Graphics/Company_Menu/Buttons/expand _button.png" id="1_0udl3"]
[ext_resource type="Script" path="res://Scenes/Company/Company Upgrades/company_upgrades.gd" id="1_4idgg"]
[ext_resource type="PackedScene" uid="uid://d0r4w2dt410pj" path="res://Scenes/Currency/Default Gold Generate/pc_extra.tscn" id="2_6tpsv"]
[ext_resource type="PackedScene" uid="uid://dvuafp3ywebug" path="res://Scenes/Currency/Default Gold Generate/pc_upgrade.tscn" id="3_0dxon"]
[ext_resource type="PackedScene" uid="uid://bhk03lbx4w278" path="res://Scenes/Company/Company Upgrades/company_button.tscn" id="3_t1o46"]

[node name="company_upgrades" type="Node2D"]
script = ExtResource("1_4idgg")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -984.0
offset_top = -1.0
offset_right = -588.0
offset_bottom = 602.0
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="pc_extra" parent="." instance=ExtResource("2_6tpsv")]
position = Vector2(-875, 0)

[node name="pc_upgrade" parent="." instance=ExtResource("3_0dxon")]
position = Vector2(-874, 105)

[node name="TextureButton3" parent="." instance=ExtResource("3_t1o46")]
offset_left = -874.0
offset_top = 210.0
offset_right = -561.0
offset_bottom = 337.0

[node name="TextureButton4" parent="." instance=ExtResource("3_t1o46")]
offset_left = -874.0
offset_top = 315.0
offset_right = -561.0
offset_bottom = 442.0

[node name="TextureButton5" parent="." instance=ExtResource("3_t1o46")]
offset_left = -874.0
offset_top = 420.0
offset_right = -561.0
offset_bottom = 547.0

[node name="side_button" type="TextureButton" parent="."]
offset_left = -626.0
offset_top = 210.0
offset_right = -439.0
offset_bottom = 273.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("1_0udl3")

[connection signal="pressed" from="side_button" to="." method="_on_side_button_pressed"]
